We've reached a working version
Now we just need to add comments so that people can read our code.
Also at some time (perhaps 1.2) It would be nice to be able to select
what fox this is ;)

--- a/TODO
+++ b/TODO
@@ -1,7 +1,6 @@
 Drink Coffee :)
 
-Rework the Morsing part to consume about one minute
-	As it is now, the morse part does not take one minute which gives the
-	problem that foxes will be off.
+IT FINALLY WORKS
+AND IS BEAUTIFUL!
 
-
+Please comment the code so that others can read it
