--- a/TODO
+++ b/TODO
@@ -4,3 +4,5 @@ IT FINALLY WORKS
 AND IS BEAUTIFUL!
 
 Please comment the code so that others can read it
+
+When the hardware is ready, reimplement the fox selector
